Adjust the styles of test application

--- a/tests/app/attributes/attributes.html
+++ b/tests/app/attributes/attributes.html
@@ -1,5 +1,5 @@
 <div>
-    <m-link is-without-visit="true">
+    <m-link state="unvisited">
         <span slot="icon-left"><</span>Back
     </m-link>
     <h2>Attributes by component</h2>
