--- a/tests/app/media-query/media-query.html
+++ b/tests/app/media-query/media-query.html
@@ -1,4 +1,7 @@
 <div>
+    <m-link state="unvisited">
+        <span slot="icon-left"><</span>Back
+    </m-link>
     <h2>min-width</h2>
     <p v-if="isMinExtraSmall">480px >= ...</p>
     <p v-if="isMinSmall">768 >= ...</p>
