--- a/tests/app/index.html
+++ b/tests/app/index.html
@@ -19,7 +19,7 @@
 
 <body class="m-no-margin">
     <header class="mtest-header">
-        <h1>MODUL <i class="m-h4 m-no-margin-top">Components></i></h1>
+        <h1>MODUL <i class="m-h4 m-no-margin-top">Components</i></h1>
     </header>
     <main class="mtest-main">
         <div id="vue">... Waiting</div>
