--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -1,6 +1,6 @@
 <div>
     <h2 class="m-u--no-margin-top"><m-link url="attributes">Attributes list</m-link></h2>
-    <h2><m-link id="mq" url="media-query">Media Queries</m-link></h2>
+    <h2><m-link id="mq" url="media-queries">Media Queries</m-link></h2>
     <h2>Components list</h2>
     <nav>
         <ul class="m-u--list-bullet">
