--- a/src/mixins/dropdown-template/dropdown-template.html
+++ b/src/mixins/dropdown-template/dropdown-template.html
@@ -10,9 +10,9 @@
               :disabled="isDisabled"
               :open="propOpen"
               dialogMode="panel"
-              :enterFn="animEnter"
-              :afterEnterFn="animAfterEnter"
-              :leaveFn="animLeave"
+              :enter="animEnter"
+              :after-enter="animAfterEnter"
+              :leave="animLeave"
               @show="toggleDropdown(true)"
               @hide="toggleDropdown(false)"
               :paddingHeader="false"
