--- a/src/mixins/base-window/base-window.html
+++ b/src/mixins/base-window/base-window.html
@@ -7,17 +7,20 @@
                     'm--is-clickable-backdrop': propCloseOnBackdrop }, className, fromClass]" :style="offsetStyle" @click.self="backdropClick"
             ref="dialogWrap">
             <article class="m-base-window__article">
-                <button type="button" @click="closeDialog" class="m-base-window__close-button" v-if="dialogMode == 'sidebar'">
+                <button type="button" @click="closeDialog" class="m-base-window__close-button" v-if="!hasHeaderSlot && !hasTitle && dialogMode == 'sidebar'">
+                    hasHeaderSlot : {{hasHeaderSlot}} <br>
+                    hasTitle : {{hasTitle}} <br>
+
                     <m-i18n i18n-key="m-base-window:close"></m-i18n>
                 </button>
-                <header class="m-base-window__header" :class="{ 'm--has-title': hasTitle, 'm--no-padding': !padding || !paddingHeader }" v-if="hasHeaderSlot || hasTitle || dialogMode == 'dialog'">
+                <header class="m-base-window__header" :class="{ 'm--has-title': hasTitle, 'm--no-padding': !padding || !paddingHeader }" v-if="(hasHeaderSlot || hasTitle) && dialogMode != 'modal'">
 
                     <h2 class="m-base-window__title" v-if="hasTitle">{{ title }}</h2>
                     <slot name="header"></slot>
                     <h2 v-if="!hasTitle && !hasHeaderSlot && dialogMode == 'dialog'">
                         Error: This component needs a header slot or title prop.
                     </h2>
-                    <m-button @click="closeDialog" mode="icon" icon-name="default" class="m-base-window__header__close-button" v-if="dialogMode == 'dialog'">
+                    <m-button @click="closeDialog" mode="icon" icon-name="default" class="m-base-window__header__close-button">
                         <m-i18n i18n-key="m-base-window:close"></m-i18n>
                     </m-button>
                 </header>
