--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -7,6 +7,16 @@
         <h2>
             <m-link url="media-queries">Media Queries</m-link>
         </h2>
+        <!-- <select v-model="myObj.selection">
+            <option v-for="i in items" :value="i">{{i}}</option>
+          </select><br/> -->
+        <m-dropdown v-model="myObj.selection" width="500px" :editable="false">
+            <m-dropdown-item v-for="i in items" :label="i" :value="i"></m-dropdown-item>
+            <!-- <m-dropdown-item :label="1" :value="1"></m-dropdown-item> -->
+        </m-dropdown>
+
+        <m-button @click="setItem()">Caption {{myCaption}}</m-button>{{myCaption}}
+        <m-button @click="setItem2()">Caption {{myObj.selection}}</m-button>{{myObj.selection}}
         <h2>Components list</h2>
         <nav class="m-u--margin-top">
             <m-bullet-list>
