dropdown groups; mobile rendering

--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -10,9 +10,15 @@
         <!-- <select v-model="myObj.selection">
             <option v-for="i in items" :value="i">{{i}}</option>
           </select><br/> -->
-        <m-dropdown v-model="myObj.selection" width="500px" :editable="true">
+        <!-- <m-dropdown v-model="myObj.selection" width="500px" :editable="true">
             <m-dropdown-item v-for="i in items" :value="i" :label="getLabel(i)"></m-dropdown-item>
             <!-- <m-dropdown-item :label="1" :value="1"></m-dropdown-item> -->
+        <!-- </m-dropdown> -->
+        <m-dropdown v-model="myObj.selection" width="500px" :editable="true">
+            <m-dropdown-item v-for="i in items" :value="i" :label="getLabel(i)"></m-dropdown-item>
+            <m-dropdown-group label="mon groupe">
+                <m-dropdown-item v-for="j in items3" :value="j" :label="getLabel(j)"></m-dropdown-item>
+            </m-dropdown-group>
         </m-dropdown>
 
 
