--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -14,7 +14,7 @@
             <m-dropdown-item v-for="i in items" :value="i" :label="getLabel(i)"></m-dropdown-item>
             <!-- <m-dropdown-item :label="1" :value="1"></m-dropdown-item> -->
         <!-- </m-dropdown> -->
-        <m-dropdown width="500px" v-model="myObj.selection" :filterable="true" :disabled="false">
+        <m-dropdown width="500px" v-model="myObj.selection" :filterable="false" :disabled="false">
             <m-dropdown-item v-for="(i, k, x) in items" :value="i" :label="getLabel(i)" :disabled="k==1||k==4" ></m-dropdown-item>
             <m-dropdown-group label="mon groupe">
                 <m-dropdown-item v-for="(j, l, y) in items3" :value="j" :label="getLabel(j)" :disabled="l==0"></m-dropdown-item>
