--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -15,7 +15,7 @@
             </m-dropdown-group>
         </m-dropdown>
 
-        <!-- <m-options-menu></m-options-menu> -->
+        <m-options-menu></m-options-menu>
 
         <!-- <component :is="template"></component> -->
 
