--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -17,7 +17,7 @@
 
         <m-options-menu></m-options-menu>
 
-        <!-- <m-button v-m-popup:dialog1>dialog</m-button>
+        <m-button v-m-popup:dialog1>dialog</m-button>
         <m-dialog ref="dialog1" title="title here">
             <p>show me something</p>
             <a href="http://google.com">google</a>
@@ -31,7 +31,7 @@
             <a href="http://bing.com">bing</a>
         </m-modal>
 
-        <m-button @click="onClick()">confirm</m-button> -->
+        <m-button @click="onClick()">confirm</m-button>
 
         <!-- <component :is="template"></component> -->
 
