keep window stack to avoid closing multiple popups at the same time

--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -18,7 +18,8 @@
         <m-options-menu></m-options-menu>
 
         <m-button v-m-popup:dialog1>dialog</m-button>
-        <m-dialog ref="dialog1" title="title here">
+        <m-dialog ref="dialog1" title="title here" size="full-size">
+            <m-options-menu></m-options-menu>
             <p>show me something</p>
             <a href="http://google.com">google</a>
             <a href="http://bing.com">bing</a>
