validation-message unit tests; added lang bundle helper; update tests

--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -8,6 +8,10 @@
             <m-link url="media-queries">Media Queries</m-link>
         </h2>
 
+        <m-validation-message error-message="patate"></m-validation-message>
+        <m-validation-message valid-message="pomme"></m-validation-message>
+        <m-validation-message helper-message="help!"></m-validation-message>
+
         <h2>Components list</h2>
         <nav class="m-u--margin-top">
             <ul class="m-u--bullet-list">
