--- a/tests/app/media-queries/media-queries.html
+++ b/tests/app/media-queries/media-queries.html
@@ -8,7 +8,7 @@
         <div>
             <h2 v-if="isMqMinXS || isMqMinS || isMqMinM || isMqMinL || isMqMinXL" >min-width</h2>
             <p id="min480" v-if="isMqMinXS">480px >= ... <strong>isMqMinXS</strong></p>
-            <p id="min768" v-if="isMqMinS">768px >= ... <strong>isMqMinS</strong></p>
+            <p id="min769" v-if="isMqMinS">769px >= ... <strong>isMqMinS</strong></p>
             <p id="min1024" v-if="isMqMinM">1024px >= ... <strong>isMqMinM</strong></p>
             <p id="min1200" v-if="isMqMinL"> 1200px >= ... <strong>isMqMinL</strong></p>
             <p id="min1600" v-if="isMqMinXL">1600px >= ... <strong>isMqXL</strong></p>
@@ -21,9 +21,9 @@
             <p id="max1600" v-if="isMqMaxXL"><strong>isMqMaxXL</strong> ... < 1600px</p>
 
             <h2 v-if="isMqS || isMqM || isMqL" >min-width and max-width</h2>
-            <p id="in480-768" v-if="isMqS">480px =­> ... <strong>isMqS</strong> ... < 768px</p>
-            <p id="in768-1024" v-if="isMqM">768px => ... <strong>isMqM</strong>... < 1024px</p>
-            <p id="in1024-1600" v-if="isMqL">1024px => ... <strong>isMqL</strong> ... < 1600px</p>
+            <p id="in480-768" v-if="isMqS">480px >= ... <strong>isMqS</strong> ... < 768px</p>
+            <p id="in769-1024" v-if="isMqM">769px >= ... <strong>isMqM</strong>... < 1024px</p>
+            <p id="in1024-1600" v-if="isMqL">1024px >= ... <strong>isMqL</strong> ... < 1600px</p>
         </div>
     </m-template>
 </m-flex-template>
