Add button-chip component -- initial commit

--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -16,5 +16,22 @@
                 </li>
             </ul>
         </nav>
+
+        <br>
+        <br>
+        <br>
+
+        <m-button-chip :active="true">
+            <m-icon name="warning" size="32px"></m-icon>
+        </m-button-chip>
+
+        <br>
+        <br>
+        <br>
+
+        <m-button-chip :active="false">
+            <m-icon name="warning" size="32px"></m-icon>
+        </m-button-chip>
+
     </m-template>
 </m-flex-template>
