--- a/tests/app/viewer.html
+++ b/tests/app/viewer.html
@@ -5,6 +5,14 @@
             <h1>{{$route.meta}}</h1>
         </div>
         <m-dynamic-template :template="tag"></m-dynamic-template>
+
+        <m-file-upload
+        @files-ready="onFilesReady"
+        @file-upload-cancel="onFileUploadCancel"
+        @done="onFilesUploadCompleted">
+        <m-button>Téléverser</m-button>
+    </m-file-upload>
+
     </m-template>
     <div slot="footer">Footer</div>
 </m-flex-template>
