Resolve Tslint problem

--- a/tests/app/viewer.html
+++ b/tests/app/viewer.html
@@ -7,11 +7,14 @@
         <m-dynamic-template :template="tag"></m-dynamic-template>
 
         <m-file-upload
-        @files-ready="onFilesReady"
-        @file-upload-cancel="onFileUploadCancel"
-        @done="onFilesUploadCompleted">
-        <m-button>Téléverser</m-button>
-    </m-file-upload>
+            @files-ready="onFilesReady"
+            @file-upload-cancel="onFileUploadCancel"
+            @done="onFilesUploadCompleted"
+            :extensions="['jpg', 'mp3']"
+            :max-files="5"
+            :maxSizeKb="20">
+            <m-button>Téléverser</m-button>
+        </m-file-upload>
 
     </m-template>
     <div slot="footer">Footer</div>
