Navbar reacivity refactor -- part I

--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -16,5 +16,28 @@
                 </li>
             </ul>
         </nav>
+
+        <br>
+        <br>
+        <br>
+
+        <div style="background:#3d3d3d;">
+            <m-navbar skin="dark" :selected.sync="testSelected">
+                <m-navbar-item value="item1">
+                    item item item 1
+                </m-navbar-item>
+                <m-navbar-item value="item2">
+                    item item item 2
+                </m-navbar-item>
+                <m-navbar-item value="item3">
+                    item item item item 3
+                </m-navbar-item>
+                <m-navbar-item value="item4">
+                    item item item item item 4
+                </m-navbar-item>
+            </m-navbar>
+        </div>
+
+
     </m-template>
 </m-flex-template>
