Navbar reacivity refactor -- part II

--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -21,8 +21,9 @@
         <br>
         <br>
 
-        <div style="background:#3d3d3d;">
-            <m-navbar skin="dark" :selected.sync="testSelected">
+        <!-- <div style="background:#3d3d3d;"> -->
+
+            <m-navbar skin="dark" :selected.sync="a">
                 <m-navbar-item value="item1">
                     item item item 1
                 </m-navbar-item>
@@ -36,7 +37,7 @@
                     item item item item item 4
                 </m-navbar-item>
             </m-navbar>
-        </div>
+        <!-- </div> -->
 
 
     </m-template>
