--- a/tests/app/viewer.html
+++ b/tests/app/viewer.html
@@ -6,27 +6,51 @@
         </div>
         <m-dynamic-template :template="tag"></m-dynamic-template>
     </m-template>
+    <div slot="footer">Footer</div>
 
+    <button @click="deleteItem">Delete an Item</button>
     <div v-m-draggable="true"
-        :drag-data="newItem"
-        :action="'addSomething'">
-        Create a new item
+        :drag-data="getNewItem('Any')">
+        Drag Any Action
+    </div>
+        <div v-m-draggable="true"
+        :drag-data="getNewItem('SomeAction')"
+        :action="'someAction'">
+        Drag SomeAction
     </div>
 
     <div v-m-sortable
         :items="items"
-        :accepted-actions="['addSomething']"
-        @sortable:add="addItem"
-        @sortable:move="moveItem">
-        <div class="emptyPlaceholder">Insert a new item!</div>
-        <div class="placeholder" style="height: 1px; background-color: black;"></div>
+        :accepted-actions="['someAction']"
+        @sortable:add="handleSortableAdd($event, items)"
+        @sortable:move="handleSortableMove($event, items)"
+        style="background-color: lightYellow; width: 50%; border: 1px solid red;">
+        <div class="emptyPlaceholder" style="background-color: lightgreen; width: 100%;">No Items.  Drop SomeAction on me!</div>
+        <div class="placeholder" style="background-color: darkgreen; height: 3px;"></div>
         <div v-for="item in items">
-            {{ item.text }}
-            <button @click="changeItem(item)">Change</button>
+            Hello from Item #{{ item.id }}: {{ item.text }}
         </div>
     </div>
-
-    {{ items }}
-
-    <div slot="footer">Footer</div>
+    <div v-m-sortable
+        :items="items2"
+        :accepted-actions="['someAction']"
+        @sortable:add="handleSortableAdd($event, items2)"
+        @sortable:move="handleSortableMove($event, items2)"
+        style="background-color: lightYellow; width: 50%; border: 1px solid blue;">
+        <div class="emptyPlaceholder" style="background-color: lightblue; width: 100%;">No Items.  Drop SomeAction on me!</div>
+        <div class="placeholder" style="background-color: red; height: 3px;"></div>
+        <div v-for="item in items2">
+            Hello from Item #{{ item.id }}: {{ item.text }}
+        </div>
+    </div>
+    <div v-m-sortable
+        :items="items3"
+        :accepted-actions="['someAction']"
+        @sortable:add="handleSortableAdd($event, items3)"
+        @sortable:move="handleSortableMove($event, items3)"
+        style="background-color: lightYellow; width: 50%; border: 1px solid green; min-height: 20px;">
+        <div v-for="item in items3">
+            Hello from Item #{{ item.id }}: {{ item.text }}
+        </div>
+    </div>
 </m-flex-template>
