--- a/tests/app/viewer.html
+++ b/tests/app/viewer.html
@@ -14,11 +14,18 @@
         :drag-data="newItem">
         Drag Any Action
     </div>
-        <div v-m-draggable="true"
+    <div v-m-draggable="true"
         :drag-data="newItem"
         :action="'someAction'">
         Drag SomeAction
     </div>
+    <div v-m-draggable="true"
+        :drag-data="newItem"
+        :action="'someAction'">
+        Drag SomeAction
+    </div>
+
+    <div id="coordinates"></div>
 
     <div v-m-sortable
         :items="items"
@@ -26,10 +33,10 @@
         @sortable:add="handleSortableAdd($event, items)"
         @sortable:move="handleSortableMove($event, items)"
         @sortable:remove="handleSortableRemove($event, items)"
-        style="background-color: lightYellow; width: 50%; border: 1px solid red;">
+        style="background-color: lightYellow; width: 100%; border: 1px solid red; margin-top: 10px;">
         <div class="emptyPlaceholder" style="background-color: lightgreen; width: 100%;">No Items.  Drop SomeAction on me!</div>
         <div class="placeholder" style="background-color: darkgreen; height: 1px;"></div>
-        <div v-for="item in items">
+        <div v-for="item in items" style="padding: 5px;">
             Hello from Item #{{ item.id }}: {{ item.text }}
         </div>
     </div>
@@ -39,10 +46,10 @@
         @sortable:add="handleSortableAdd($event, items2)"
         @sortable:move="handleSortableMove($event, items2)"
         @sortable:remove="handleSortableRemove($event, items2)"
-        style="background-color: lightYellow; width: 50%; border: 1px solid blue;">
+        style="background-color: lightYellow; border: 1px solid blue; margin-top: 10px;">
         <div class="emptyPlaceholder" style="background-color: lightblue; width: 100%;">No Items.  Drop SomeAction on me!</div>
         <div class="placeholder" style="background-color: red; height: 1px;"></div>
-        <div v-for="item in items2">
+        <div v-for="item in items2" style="padding: 5px;">
             Hello from Item #{{ item.id }}: {{ item.text }}
         </div>
     </div>
@@ -52,8 +59,8 @@
         @sortable:add="handleSortableAdd($event, items3)"
         @sortable:move="handleSortableMove($event, items3)"
         @sortable:remove="handleSortableRemove($event, items3)"
-        style="background-color: lightYellow; width: 50%; border: 1px solid green; min-height: 20px;">
-        <div v-for="item in items3">
+        style="background-color: lightYellow; border: 1px solid green; min-height: 20px; margin-top: 10px;">
+        <div v-for="item in items3" style="padding: 5px;">
             Hello from Item #{{ item.id }}: {{ item.text }}
         </div>
     </div>
