--- a/tests/app/viewer.html
+++ b/tests/app/viewer.html
@@ -49,7 +49,7 @@
             <div>childs</div>
         </div>
     </div> -->
-    <div v-m-sortable
+    <!-- <div v-m-sortable
         :items="items"
         :accepted-actions="['someAction', 'addGrouping']"
         @sortable:add="handleSortableAdd($event, items)"
@@ -65,7 +65,6 @@
                 v-if="item.grouping"
                 :items="item.items"
                 :accepted-actions="['someAction']"
-                :grouping="item.grouping"
                 @sortable:add="handleSortableAdd($event, item.items)"
                 @sortable:move="handleSortableMove($event, item.items)"
                 @sortable:remove="handleSortableRemove($event, item.items)"
@@ -75,7 +74,7 @@
                 <div v-for="subItem in item.items" style="padding: 5px;">Item #{{subItem.id}}</div>
             </div>
         </div>
-    </div>
+    </div> -->
     <br>
     <br>
     <br>
@@ -85,7 +84,7 @@
     </div>
     <div v-m-sortable
         :items="items2"
-        :accepted-actions="['move']"
+        :accepted-actions="['any']"
         @sortable:add="handleSortableAdd($event, items2)"
         @sortable:move="handleSortableMove($event, items2)"
         @sortable:remove="handleSortableRemove($event, items2)"
@@ -95,16 +94,15 @@
                 <div class="empty-placeholder__inner empty-placeholder__inner--centered">Drop an item from another sortable on me!</div>
             </div>
         </div>
-        <div v-for="item in items2" class="sortable__item">
+        <div v-for="item in items2" class="sortable__item" v-m-sortable-group="item.grouping">
             <div class="sortable__item--inner">
                 Item #{{ item.id }}: {{ item.text }}.
                 <span v-if="item.grouping">Group: {{ item.grouping }}</span>
-                <button>Can you click me?</button>
+                <button @click="item.grouping = item.grouping * 1000">Can you click me?</button>
                 <div v-m-sortable
                     v-if="item.grouping"
                     :items="item.items"
                     :accepted-actions="['someAction']"
-                    :grouping="item.grouping"
                     @sortable:add="handleSortableAdd($event, item.items)"
                     @sortable:move="handleSortableMove($event, item.items)"
                     @sortable:remove="handleSortableRemove($event, item.items)"
